# rust-rocket-mongo-example

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/controllers/: mod.rs  not_found.rs  status.rs  user.rs
src/lib/: jwt.rs  mod.rs  mongo.rs
src/meta/: user.rs
src/middleware/: authentication.rs
src/models/: user.rs
